// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bar Spacing Decorator 1`] = `
<div
  style={
    Object {
      "WebkitBoxFlex": "1 !important",
      "WebkitFlex": 1,
      "WebkitFlexGrow": "1 !important",
      "WebkitFlexShrink": "1 !important",
      "flex": 1,
      "flexGrow": "1 !important",
      "flexShrink": "1 !important",
      "marginTop": "20px",
      "msFlex": 1,
      "msFlexNegative": "1 !important",
      "msFlexPositive": "1 !important",
    }
  }
>
  <div
    dir="auto"
  >
    I am in Storybook!
  </div>
</div>
`;

exports[`Centered Decorator 1`] = `
<div
  style={
    Object {
      "WebkitAlignItems": "center",
      "WebkitBoxAlign": "center",
      "WebkitBoxDirection": "normal",
      "WebkitBoxFlex": "1 !important",
      "WebkitBoxOrient": "horizontal",
      "WebkitBoxPack": "center",
      "WebkitFlex": 1,
      "WebkitFlexDirection": "row",
      "WebkitFlexGrow": "1 !important",
      "WebkitFlexShrink": "1 !important",
      "WebkitJustifyContent": "center",
      "alignItems": "center",
      "bottom": "0px",
      "flex": 1,
      "flexDirection": "row",
      "flexGrow": "1 !important",
      "flexShrink": "1 !important",
      "justifyContent": "center",
      "left": "0px",
      "msFlex": 1,
      "msFlexAlign": "center",
      "msFlexDirection": "row",
      "msFlexNegative": "1 !important",
      "msFlexPack": "center",
      "msFlexPositive": "1 !important",
      "position": "absolute",
      "right": "0px",
      "top": "0px",
    }
  }
>
  <div
    dir="auto"
  >
    I am in Storybook!
  </div>
</div>
`;

exports[`Lateral Spacing Decorator 1`] = `
<div
  style={
    Object {
      "WebkitBoxFlex": "1 !important",
      "WebkitFlex": 1,
      "WebkitFlexGrow": "1 !important",
      "WebkitFlexShrink": "1 !important",
      "flex": 1,
      "flexGrow": "1 !important",
      "flexShrink": "1 !important",
      "marginLeft": "20px",
      "marginRight": "20px",
      "msFlex": 1,
      "msFlexNegative": "1 !important",
      "msFlexPositive": "1 !important",
    }
  }
>
  <div
    dir="auto"
  >
    I am in Storybook!
  </div>
</div>
`;

exports[`The showcase converter should add a decorator between stories 1`] = `
Array [
  Object {
    "component": <div>
      Hello World!
    </div>,
    "name": "My Story",
  },
  <div>
    Some decorator
  </div>,
  Object {
    "component": <div>
      Hello World Again!
    </div>,
    "name": "My Story 2",
  },
]
`;

exports[`The showcase converter should add a single story 1`] = `
Array [
  Object {
    "component": <div>
      Hello World!
    </div>,
    "name": "My Story",
  },
]
`;

exports[`The showcase converter should add a story with a decorator 1`] = `
Array [
  <div>
    Some decorator
  </div>,
  Object {
    "component": <div>
      Hello World!
    </div>,
    "name": "My Story",
  },
]
`;

exports[`The showcase converter should add two stories 1`] = `
Array [
  Object {
    "component": <div>
      Hello World!
    </div>,
    "name": "My Story 1",
  },
  Object {
    "component": <div>
      Hello World Again!
    </div>,
    "name": "My Story 2",
  },
]
`;

exports[`The showcase converter should filter stories by platform 1`] = `
Array [
  Object {
    "component": <div>
      All!
    </div>,
    "name": "All platforms",
  },
  Object {
    "component": <div>
      Web!
    </div>,
    "name": "Web only",
  },
]
`;

exports[`The showcase converter should provide the action to a story 1`] = `
Array [
  Object {
    "component": <div>
      Hello World!
    </div>,
    "name": "My Story",
  },
]
`;

exports[`The showcase converter should provide the color knob to a story 1`] = `
Array [
  Object {
    "component": <div
      color="red"
    >
      Hello World!
    </div>,
    "name": "My Story",
  },
]
`;

exports[`The showcase converter should provide the select knob to a story 1`] = `
Array [
  Object {
    "component": <div
      color="red"
    >
      Hello World!
    </div>,
    "name": "My Story",
  },
]
`;

exports[`White Background Decorator 1`] = `
<div
  style={
    Object {
      "WebkitBoxFlex": "1 !important",
      "WebkitFlex": 1,
      "WebkitFlexGrow": "1 !important",
      "WebkitFlexShrink": "1 !important",
      "backgroundColor": "white",
      "bottom": "0px",
      "flex": 1,
      "flexGrow": "1 !important",
      "flexShrink": "1 !important",
      "left": "0px",
      "msFlex": 1,
      "msFlexNegative": "1 !important",
      "msFlexPositive": "1 !important",
      "position": "absolute",
      "right": "0px",
      "top": "0px",
    }
  }
>
  <div
    dir="auto"
  >
    I am in Storybook!
  </div>
</div>
`;
